# kphis_image

./: .gitignore  Cargo.toml  LICENSE  README.md  client.bat  reload.bat  serve.bat
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  route.rs
crates/backend/: Cargo.toml  README.md
crates/backend/src/: handlers.rs  main.rs  route.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: abort.rs  binding.rs  fetch.rs  image.rs  lib.rs  loader.rs  mixins.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
frontend/: Cargo.toml  README.md
frontend/src/: binding.rs  lib.rs  loader.rs
volume/pwa/: app.css  app.js  bootstrap.min.css  font-awesome.min.css  index.html  manifest.webmanifest  sw.js  sw_template.js
