[workspace]
members = [ "backend", "frontend" ]
resolver = "2"

[workspace.package]
version = "0.1.1"
rust-version = "1.83"
edition = "2021"
authors = ["Marisada Pitakthum <p.marisada@gmail.com>"]
description = "Dominator + Axum template"
license = "MIT"
repository = "https://github.com/Marisada/dominator-axum"
keywords = []

[workspace.dependencies]
concat-string = "1"
dominator = "0.5"
futures = "0.3"
futures-signals = "0.3"
js-sys = "0.3"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde-wasm-bindgen = "0.6"
time = { version = "0.3", features = [ "wasm-bindgen", "serde" ]}
ulid = { version = "1", features = ["serde"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AbortController",
    "AbortSignal",
    "console",
    "DocumentFragment", 
    "File",
    "FileList",
    "FormData",
    "Headers",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Request", 
    "RequestInit", 
    "Response", 
    "Storage",
    "SvgAnimationElement",
    "Url", 
    "Window"
]}

[profile.dev]
lto = false
opt-level = 0
incremental = true
panic = "abort"
debug = false
codegen-units = 256

[profile.release]
lto = true
opt-level = 'z'
incremental = false
panic = "abort"
debug = false
codegen-units = 1